Adding music and scrolling effects

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
-<body onload="initialize()" onmousemove="bodyMouseHandler()">
+<body onload="initialize()">
 
   <div class="container" id="container">
 
@@ -21,6 +21,12 @@
     </div>
 
     <!-- Music Toggle -->
+    <div class="music-toggle">
+      <img src="./res/musical-note-removebg-preview.png" class="music-icon">
+      <img src="./res/play-removebg-preview.png" class="music-icon img-clickable" id="img-music-play">
+      <img src="./res/pause-removebg-preview.png" class="music-icon img-clickable" id="img-music-pause"
+        style="display: none">
+    </div>
 
     <!-- Modal -->
 
