--- a/src/index.html
+++ b/src/index.html
@@ -34,14 +34,16 @@
     <div id="slide1" class="slide">
 
       <!-- Angel X Mikko -->
-      <img src="./res/title-center.png" class="img-title-image" />
+      <!-- <img src="./res/title-center.png" class="img-title-image" /> -->
 
       <!-- Cventer Image -->
-      <img src="./res/hug-removebg-preview.png" class="img-hug" />
+      <!-- <img src="./res/hug-removebg-preview.png" class="img-hug" /> -->
 
       <!-- Corner Rings -->
-      <img src="./res/rings.png" class="img-corner-rings" />
+      <!-- <img src="./res/rings.png" class="img-corner-rings" /> -->
 
+      <!-- Centered Image -->
+      <img src="./res/catslide1.png" class="img-center-cats" />
       <!-- Navi Panel -->
       <div class="navi-panel">
         <div class="line-brown"></div>
@@ -193,10 +195,20 @@
       <div id="modal-slide4" class="modal">
         <div class="modal-content">
           <div class="modal-question-container">
-            <div class="modal-body ff-poppins-light">
+            <div class="modal-body ff-poppins-light centered text-center">
               <img src="./res/cat-roll-transparent.gif" class="modal-question-cats" />
-              <p class="modal-question-text ff-playfairdisplay-italic">
-                will you be my forever?
+              <div class="ff-poppins-light modal-question-text">
+                <p>
+                  My only dream in life is to proudly say that you're my wife and to live our happy lives together in
+                  union while taking care of our many, many children (cats).
+                </p>
+                <p>
+                  Thank you for considering and allowing me to be a part of your life. I feel honored to say that
+                  swiping right on your Bumble profile was one of the best decisions of my life.
+                </p>
+              </div>
+              <p class="modal-question-thequestion ff-playfairdisplay-italic">
+                I love you, Mikko. Please marry me.
               </p>
               <div class="modal-question-answers">
                 <button class="btn btn-regular ff-poppins-light" onclick="sheSaidYes()">
