2nd page update

--- a/src/index.html
+++ b/src/index.html
@@ -87,26 +87,26 @@
                 Mikko,
               </p>
               <p>
-                I'm going to be better for you, this I promise. I will be deserving of you, worthy of you, until every
-                fiber of my being knows it and can scream with pride that I earned the right to be yours.
+                First of all, I love you. Every day I love you more than the last.
               </p>
               <p>
-                I want to know that I don't have to be afraid of losing you; that I never have to worry how I'll survive
-                without you. When I wake up, I want to start my day knowing I have you. When I close my eyes at night, I
-                want to sleep blissfully knowing I'm yours.
+                Only god knows how grateful I am for your existence and for loving me the same. You are smart and kind.
+                You have the weirdest sense of humor. You make me laugh and you keep me grounded. You make me feel safe
+                and important. I love every little thing about you. All the little things that make you YOU are what I
+                adore. I feel like the luckiest person in the world getting to know you. You are a truly amazing person,
+                with flaws like everyone else, but still absolutely wonderful. I'm just so lucky to have you.
               </p>
               <p>
-                I make this vow here and now: I am in love with every inch and curve and perfect imperfection that is
-                you. I thank the universe every day that I am allowed to love you. As of this moment, I will be a calm,
-                understanding love. I will be a love of patience and acceptance. I will wake every day and tell you
-                something about yourself that I love, and I will part from you every night before we sleep reminding you
-                of it. I will spend every moment I have being a compassionate love, a trustworthy love. I will give you
-                my all to make every day together beautiful with joy, love, peacefulness. I will be the love you
-                deserve, the love that communicates and solves problems. I will be the love I can dream of being for you
-                until I can no longer doubt that I can.
+                Thank you for being understanding and patient to me. Thank you for taking care of my heart and my
+                well-being, for trying and trying with me. For loving me at both of my best and worst. And thank you for
+                not giving up on me. I'm getting emo now but I just want you to know that being able to see you and hug
+                you already completes my day. You're more than enough. You're my source of strength and motivation to
+                keep going.
               </p>
               <p>
-                Yours forever and always, <br>
+                Thank you, Mikko. I'll always try my best to love and protect you ❤️ I love you so much.
+              </p>
+              <p>
                 Angel
               </p>
               <img src="./res/letter-cats-removebg-preview.png" class="modal-letter-cats" />
@@ -228,7 +228,7 @@
     <div id="slide5" class="slide">
       <!-- Center Group -->
       <div class="center-group">
-        <img src="./res/catslide5.png" alt="" srcset="">
+        < <img src="./res/catslide5.png" alt="" srcset="">
       </div>
     </div>
 
