Adding slide 5 text

--- a/src/index.html
+++ b/src/index.html
@@ -228,7 +228,9 @@
     <div id="slide5" class="slide">
       <!-- Center Group -->
       <div class="center-group">
-        < <img src="./res/catslide5.png" alt="" srcset="">
+        <img src="./res/img-slide5-text-left.png" alt="" srcset="">
+        <img src="./res/catslide5.png" alt="" srcset="">
+        <img src="./res/img-slide5-text-right.png" alt="" srcset="">
       </div>
     </div>
 
